INGRESS/tomcat-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
  labels:
    type: tomcat-appserver
spec:
  replicas: 1
  selector:
    matchLabels:
      type: appserver
  template:
    metadata:
      name: tomcat-pod
      labels:
        type: appserver
    spec:
      containers:
        - name: mytomy
          image: tomee
          ports:
            - containerPort: 8080
...
