INGRESS/tomcat-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  labels:
spec:
  type: ClusterIP
  ports:
    - name: tomcat
      targetPort: 8080
      port: 80
  selector:
    type: appserver
...
